--- a/work_and_education.html
+++ b/work_and_education.html
@@ -17,8 +17,7 @@
 <ul><h2><font color="black"><b><i><u>Work and Education</u></i></b></font></h2>
 <ul type="disc">
 <br><li><font color="black"><b> University: </b></font> <i>Gebze Technical University </i></li>
-<i><h5>
-2013 to 2018-Computer Engineering-Kocaeli,Turkey </h5></i>
+<i><h5>2013 to 2018-Computer Engineering-Kocaeli,Turkey </h5></i>
 <br><li><font color="black"><b> High School: </b></font><i>Haydarpasa Anadolu Lisesi</i></li>
 <i><h5>Class of 2013-Istanbul,Turkey</h5></i>
 <br><li><font color="black"><b> Work: </b></font><i>Student </i></li><i><h5>at Gebze Technical University</h5></i>
